libreoffice (1:5.4.1~rc1-1) UNRELEASED; urgency=medium

  * New upstream release candidate

  * debian/patches/stop-shipping-mimelnk-desktop-files.diff: as name says
    (closes: #872001)
  * debian/patches/fix-middle-click-paste.diff: as name says; backport
    from master (closes: #871588)

  * debian/rules:
    - run dh_strip_nondeterminism

 -- Rene Engelhard <rene@debian.org>  Sat, 12 Aug 2017 10:36:57 +0200

libreoffice (1:5.4.0-2) UNRELEASED; urgency=medium

  * debian/rules:
    - install appstream stuff into /usr/share/metainfo. sigh.
    - make -writer-dbgsym recommend -core-dbgsym as it wants some gdb stuff
      from it
    - set UNO_LIBS_DBG_ROOT to fix gdb helper installation for uno-libs3 again
      and make -core-dbgsym recommends uno-libs3-dbgsym (same reason as above)
    - generate and install apparmor profiles
    - be consequent and bump the build-dependencies for the DLP libs when
      we run the tests; based on patch by Rico Tzschichholz
  * debian/control*in:
    - move to policy 4.0.1; extra -> optional

 -- Rene Engelhard <rene@debian.org>  Sat, 05 Aug 2017 14:15:19 +0000

libreoffice (1:5.4.0-1) unstable; urgency=medium

  * New upstream release

  * upload to unstable

  * debian/patches/examples-fix-SDK_AUTO_DEPLOYMENT-check.diff: don't try
    to do "auto deployment" when SDK_AUTO_DEPLOYMENT = NO...
  * debian/patches/libebook-1.2.so.19.diff: backport from master; adds
    libebook-1.2.so.19 (e-d-s 3.24+) to EApi.cxx

  * debian/rules:
    - strip librhino-java from java:Depends, we use the internal one still..
    - add pstoedit, imagemagick and ghostscript as (test) Build-Depends:
  * debian/control.in:
    - add ghostscript to the "EPS Suggests"
  * debian/rules. debian/control.in:
    - add libsane-suggests substvar to prepare for libsane1

  * merge from Ubuntu, thanks Rico Tzschichholz
    - don't recommend libreoffice-sdbc-firebird if firebird is disabled

  [ Rico Tzschichholz ]