@@ -41,7 +41,6 @@ Build-Depends: ant (>= 1.7.0) [!hppa !ia64 !mips64 !s390 !sparc],
                java-common (>= 0.49),
                javahelper (>= 0.37~),
                junit4 (>= 4.8.2-2) [!hppa !kfreebsd-amd64 !kfreebsd-i386 !m68k !mips !mips64 !powerpc !powerpcspe !ppc64 !s390 !s390x !sparc !sparc64] <!nocheck>,
-               kdelibs5-dev (>= 4:4.3.4),
                libabw-dev (>= 0.1),
                libarchive-zip-perl [!hppa !ia64 !mips64 !s390 !sparc],
                libavahi-client-dev,
@@ -120,7 +119,6 @@ Build-Depends: ant (>= 1.7.0) [!hppa !ia64 !mips64 !s390 !sparc],
                libpoppler-dev (>= 0.12.0),
                libpoppler-private-dev,
                libpq-dev (>= 9.0~),
-               libqt4-dev (>= 4:4.8),
                librdf0-dev (>= 1.0.16-2),
                librevenge-dev,
                libsane-dev,
@@ -231,7 +229,7 @@ Suggests: cups-bsd,
           iceweasel | firefox | icedove | thunderbird | iceape-browser | mozilla-browser,
           imagemagick | graphicsmagick-imagemagick-compat,
           libgl1,
-          libreoffice-gnome | libreoffice-kde,
+          libreoffice-gnome,
           libreoffice-grammarcheck,
           libreoffice-help (= ${help-l10n-virtual-version}),
           libreoffice-l10n (= ${help-l10n-virtual-version}),
@@ -371,7 +369,6 @@ Architecture: all
 Depends: libreoffice-style-default | libreoffice-style, ure, ${misc:Depends}
 Suggests: libreoffice-style-breeze,
           libreoffice-style-hicontrast,
-          libreoffice-style-oxygen,
           libreoffice-style-sifr,
           libreoffice-style-tango
 Recommends: fonts-liberation | ttf-mscorefonts-installer,
@@ -395,8 +392,6 @@ Breaks: libreoffice-core (<< 1:${oover}~),
         libreoffice-style-galaxy (>= 1:${next-oover}~),
         libreoffice-style-hicontrast (<< 1:${oover}~),
         libreoffice-style-hicontrast (>= 1:${next-oover}~),
-        libreoffice-style-oxygen (<< 1:${oover}~),
-        libreoffice-style-oxygen (>= 1:${next-oover}~),
         libreoffice-style-tango (<< 1:${oover}~),
         libreoffice-style-tango (>= 1:${next-oover}~),
         libreoffice-writer2latex (<< 1.0.2-9),
@@ -524,18 +519,6 @@ Description: office productivity suite -- database
  a near drop-in replacement for Microsoft(R) Office.
  .
  This package contains the database component for LibreOffice.
-
-Package: libreoffice-style-oxygen
-Architecture: all
-Enhances: libreoffice-core
-Depends: libreoffice-style-tango, ${misc:Depends}
-Suggests: kde-icons-oxygen, oxygencursors
-Provides: libreoffice-style
-Description: office productivity suite -- Oxygen symbol style
- LibreOffice is a full-featured office productivity suite that provides
- a near drop-in replacement for Microsoft(R) Office.
- .
- This package contains the "oxygen" symbol style, default style for KDE 4.
 
 Package: libreoffice-style-breeze
 Architecture: all
@@ -4272,26 +4255,6 @@ Description: common data for LOKDocView
  .
  This package contains architecture-independent data (e.g. the selection
  handlers).
-
-Package: libreoffice-kde
-Architecture: alpha amd64 arm64 armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 m68k mips mipsel mips64 mips64el powerpc powerpcspe ppc64 ppc64el s390 s390x sparc sparc64
-Depends: libreoffice-core (= ${binary:Version}),
-         ${misc:Depends},
-         ${shlibs:Depends}
-Recommends: ${kde-iconset-dep}
-Suggests: kmail, konqueror
-Section: kde
-Enhances: libreoffice
-Replaces: libreoffice-core (= 1:4.3.0~beta1-1)
-Description: office productivity suite -- KDE integration
- LibreOffice is a full-featured office productivity suite that provides
- a near drop-in replacement for Microsoft(R) Office.
- .
- This package contains the KDE plugin for drawing OOo's widgets with
- KDE/Qt and a KDEish File Picker when running under KDE.
- You can extend the functionality of this by installing these packages:
- .
-  * konqueror / kmail
 
 Package: libreoffice-sdbc-postgresql
 Section: misc
