@@ -193,7 +193,6 @@ Architecture: all
 Depends: libreoffice-style-default | libreoffice-style, ure, ${misc:Depends}
 Suggests: libreoffice-style-breeze,
           libreoffice-style-hicontrast,
-          libreoffice-style-oxygen,
           libreoffice-style-sifr,
           libreoffice-style-tango
 Recommends: ${pyuno-depends}, ${textcat-data-recommends}, fonts-liberation | ttf-mscorefonts-installer
@@ -215,8 +214,6 @@ Breaks: libreoffice-core (<< 1:${oover}~),
         libreoffice-style-galaxy (>= 1:${next-oover}~),
         libreoffice-style-hicontrast (<< 1:${oover}~),
         libreoffice-style-hicontrast (>= 1:${next-oover}~),
-        libreoffice-style-oxygen (<< 1:${oover}~),
-        libreoffice-style-oxygen (>= 1:${next-oover}~),
         libreoffice-style-tango (<< 1:${oover}~),
         libreoffice-style-tango (>= 1:${next-oover}~),
         libreoffice-writer2latex (<< 1.0.2-9),
@@ -344,18 +341,6 @@ Description: office productivity suite -- database
  a near drop-in replacement for Microsoft(R) Office.
  .
  This package contains the database component for LibreOffice.
-
-Package: libreoffice-style-oxygen
-Architecture: all
-Enhances: libreoffice-core
-Depends: libreoffice-style-tango, ${misc:Depends}
-Suggests: kde-icons-oxygen, oxygencursors
-Provides: libreoffice-style
-Description: office productivity suite -- Oxygen symbol style
- LibreOffice is a full-featured office productivity suite that provides
- a near drop-in replacement for Microsoft(R) Office.
- .
- This package contains the "oxygen" symbol style, default style for KDE 4.
 
 Package: libreoffice-style-breeze
 Architecture: all
