@@ -191,7 +191,7 @@ SYSTEM_STUFF += libstaroffice
 BUILD_CAIROCANVAS=y
 SYSTEM_STUFF += cairo
 CAIRO_FONTS_PATCH=y
-BUILD_KDE=y
+BUILD_KDE=n
 # < 4.8 fails with gcc 4.7, see #667911
 QT_MINVER= (>= 4:4.8)
 KDELIBS_MINVER= (>= 4:4.3.4)
@@ -406,7 +406,7 @@ SYSTEM_STUFF += libexttextcat
 SYSTEM_STUFF += cppunit
 CPPUNIT_MINVER=1.14
 DEFAULT_IMAGE=galaxy
-IMAGES:=$(DEFAULT_IMAGE) hicontrast oxygen tango sifr sifr_dark breeze breeze_dark
+IMAGES:=$(DEFAULT_IMAGE) hicontrast tango sifr sifr_dark breeze breeze_dark
 CONFIGURE_FLAGS_INDEP += --with-theme="$(IMAGES)"
 ENABLE_MYSQLNATIVE=y
 MYSQL_FLAVOUR=default
