@@ -9,6 +9,9 @@ libreoffice (1:5.4.1~rc1-1) UNRELEASED; urgency=medium
 
   * debian/rules:
     - run dh_strip_nondeterminism
+    - disable -kde and the (unmaintained for LO) oxygen theme.
+      Qt4 should go away. See
+      https://lists.debian.org/debian-devel-announce/2017/08/msg00006.html
 
  -- Rene Engelhard <rene@debian.org>  Sat, 12 Aug 2017 10:36:57 +0200
 
